# term_games

snake/: CMakeLists.txt
snake/include/: apple.h  body.h  element.h  game.h  snake.h
snake/src/: apple.cpp  element.cpp  game.cpp  main.cpp  snake.cpp
